[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/gfx/config_assets/settlement_portrait/settlement0_with_npc.png" type="Texture" id=1]
[ext_resource path="res://src/gui/menus/settlement_screen/settlement_screen.gd" type="Script" id=2]
[ext_resource path="res://assets/gfx/ui_elements/dialogue_triangle.png" type="Texture" id=3]
[ext_resource path="res://assets/ui_styles/outer_panel.tres" type="StyleBox" id=4]
[ext_resource path="res://src/gui/menus/settlement_screen/TradeScreen.tscn" type="PackedScene" id=5]

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

uniform sampler2D target_texture;
uniform float fade_weight: hint_range(0, 1);

void fragment()
{
    vec4 color_a = texture(TEXTURE, UV);
    vec4 color_b = texture(target_texture, UV);
    COLOR = mix(color_a, color_b, fade_weight);
}"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )
shader_param/fade_weight = 0.0
shader_param/target_texture = ExtResource( 1 )

[sub_resource type="StreamTexture" id=7]
load_path = "res://.import/settlement0.png-56d8df6f10bf789c993018fbe41d47db.stex"

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/fade_weight")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "show_npc"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/fade_weight")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "Active"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 75, 85.0, 75 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 75 ]
}

[node name="SettlementScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.145098, 0.0980392, 0.160784, 0.54902 )

[node name="MainScreen" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_top = 8
custom_constants/margin_left = 32
custom_constants/margin_bottom = 96

[node name="PanelContainer" type="PanelContainer" parent="MainScreen"]
margin_left = 32.0
margin_top = 8.0
margin_right = 992.0
margin_bottom = 504.0
custom_styles/panel = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="MainScreen/PanelContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 944.0
margin_bottom = 480.0
custom_constants/separation = 30

[node name="SettlementContainer" type="VBoxContainer" parent="MainScreen/PanelContainer/HBoxContainer"]
margin_right = 545.0
margin_bottom = 464.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.55
custom_constants/separation = 10

[node name="SettlementImageContainer" type="PanelContainer" parent="MainScreen/PanelContainer/HBoxContainer/SettlementContainer"]
margin_right = 545.0
margin_bottom = 340.0
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="SettlementImage" type="TextureRect" parent="MainScreen/PanelContainer/HBoxContainer/SettlementContainer/SettlementImageContainer"]
material = SubResource( 6 )
margin_left = 8.0
margin_top = 8.0
margin_right = 537.0
margin_bottom = 332.0
texture = SubResource( 7 )
expand = true
stretch_mode = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="MainScreen/PanelContainer/HBoxContainer/SettlementContainer/SettlementImageContainer/SettlementImage"]
anims/RESET = SubResource( 8 )
anims/show_npc = SubResource( 9 )

[node name="SettlementDescriptionContainer" type="PanelContainer" parent="MainScreen/PanelContainer/HBoxContainer/SettlementContainer"]
margin_top = 350.0
margin_right = 545.0
margin_bottom = 464.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MainScreen/PanelContainer/HBoxContainer/SettlementContainer/SettlementDescriptionContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 537.0
margin_bottom = 106.0
custom_constants/separation = 13

[node name="SettlementName" type="Label" parent="MainScreen/PanelContainer/HBoxContainer/SettlementContainer/SettlementDescriptionContainer/VBoxContainer"]
margin_right = 529.0
margin_bottom = 12.0
size_flags_vertical = 1
text = "Settlement Name Template:"

[node name="SettlementDescription" type="Label" parent="MainScreen/PanelContainer/HBoxContainer/SettlementContainer/SettlementDescriptionContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 529.0
margin_bottom = 98.0
size_flags_vertical = 3
text = "Settlement description template."
autowrap = true

[node name="Timer" type="Timer" parent="MainScreen/PanelContainer/HBoxContainer/SettlementContainer/SettlementDescriptionContainer/VBoxContainer/SettlementDescription"]

[node name="DialoguePointer" type="TextureRect" parent="MainScreen/PanelContainer/HBoxContainer/SettlementContainer/SettlementDescriptionContainer"]
visible = false
margin_left = 601.0
margin_top = 75.0
margin_right = 617.0
margin_bottom = 101.0
size_flags_horizontal = 8
size_flags_vertical = 8
texture = ExtResource( 3 )
stretch_mode = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="MainScreen/PanelContainer/HBoxContainer/SettlementContainer/SettlementDescriptionContainer/DialoguePointer"]
anims/Active = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="OptionsContainer" type="PanelContainer" parent="MainScreen/PanelContainer/HBoxContainer"]
margin_left = 575.0
margin_right = 928.0
margin_bottom = 464.0
size_flags_horizontal = 3

[node name="Options" type="VBoxContainer" parent="MainScreen/PanelContainer/HBoxContainer/OptionsContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 345.0
margin_bottom = 456.0

[node name="AcceptButton" type="Button" parent="MainScreen/PanelContainer/HBoxContainer/OptionsContainer/Options"]
visible = false
margin_right = 195.0
margin_bottom = 42.0
size_flags_vertical = 3
text = "*accept*"

[node name="DeclineButton" type="Button" parent="MainScreen/PanelContainer/HBoxContainer/OptionsContainer/Options"]
visible = false
margin_right = 195.0
margin_bottom = 47.0
size_flags_vertical = 3
text = "*decline*"

[node name="GoodbyeButton" type="Button" parent="MainScreen/PanelContainer/HBoxContainer/OptionsContainer/Options"]
visible = false
margin_right = 195.0
margin_bottom = 53.0
size_flags_vertical = 3
text = "*say goodbye*"

[node name="TalkButton" type="Button" parent="MainScreen/PanelContainer/HBoxContainer/OptionsContainer/Options"]
margin_right = 337.0
margin_bottom = 44.0
size_flags_vertical = 3
text = "Talk"
clip_text = true

[node name="TradeButton" type="Button" parent="MainScreen/PanelContainer/HBoxContainer/OptionsContainer/Options"]
margin_top = 48.0
margin_right = 337.0
margin_bottom = 92.0
size_flags_vertical = 3
text = "Trade"

[node name="LeaveButton" type="Button" parent="MainScreen/PanelContainer/HBoxContainer/OptionsContainer/Options"]
margin_top = 96.0
margin_right = 337.0
margin_bottom = 140.0
size_flags_vertical = 3
text = "Leave"

[node name="Padding" type="Control" parent="MainScreen/PanelContainer/HBoxContainer/OptionsContainer/Options"]
margin_top = 144.0
margin_right = 337.0
margin_bottom = 448.0
size_flags_vertical = 3
size_flags_stretch_ratio = 6.88

[node name="TradeScreen" parent="." instance=ExtResource( 5 )]
visible = false

[connection signal="gui_input" from="MainScreen/PanelContainer/HBoxContainer/SettlementContainer/SettlementDescriptionContainer" to="." method="_on_SettlementDescriptionContainer_gui_input"]
[connection signal="pressed" from="MainScreen/PanelContainer/HBoxContainer/OptionsContainer/Options/AcceptButton" to="." method="_on_AcceptButton_pressed"]
[connection signal="pressed" from="MainScreen/PanelContainer/HBoxContainer/OptionsContainer/Options/DeclineButton" to="." method="_on_DeclineButton_pressed"]
[connection signal="pressed" from="MainScreen/PanelContainer/HBoxContainer/OptionsContainer/Options/GoodbyeButton" to="." method="_on_GoodbyeButton_pressed"]
[connection signal="pressed" from="MainScreen/PanelContainer/HBoxContainer/OptionsContainer/Options/TalkButton" to="." method="_on_TalkButton_pressed"]
[connection signal="pressed" from="MainScreen/PanelContainer/HBoxContainer/OptionsContainer/Options/TradeButton" to="." method="_on_TradeButton_pressed"]
[connection signal="pressed" from="MainScreen/PanelContainer/HBoxContainer/OptionsContainer/Options/LeaveButton" to="." method="_on_LeaveButton_pressed"]
